# LabWork7

./: CMakeLists.txt  Gtests.cpp  Main.cpp  Task_1.h  Task_2.h  Task_3.h  Task_4.h  Task_5.h
